# libtorch_example

./: .gitignore  CMakeLists.txt  README.md  inference.cpp  run.sh  test.cpp  train_cnn.cpp  train_fcn.cpp  transform.cpp
model/: CNN.hpp  FCN.hpp
utils/: utils.hpp
